--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -147,6 +147,7 @@
                     display: flex;
                     justify-content: flex-start;
                     align-items: center;
+                    padding-bottom: 20px;
 
                     .agree-hover {
                         width: 24px;
@@ -230,17 +231,22 @@
                     }
                 }
 
-                button {
-                    width: 269px;
-                    height: 68px;
-                    border: 4px solid #FFFCF3;
-                    opacity: 0.3;
-                    background-color: #000000;
-                    color: #FFFCF3;
-                    font-family: Overpass;
-                    font-size: 23px;
-                    font-weight: 400;
-                    text-align: center;
+                .button-container {
+                    display: flex;
+                    justify-content: center;
+
+                    button {
+                        width: 269px;
+                        height: 68px;
+                        border: 4px solid #FFFCF3;
+                        opacity: 0.3;
+                        background-color: #000000;
+                        color: #FFFCF3;
+                        font-family: Overpass;
+                        font-size: 23px;
+                        font-weight: 400;
+                        text-align: center;
+                    }
                 }
 
                 .active {
