--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,8 @@
         <p class="email">pesendorfer.gerald@hotmail.com</p>
 
         <div class="info-right">
-            <div class="animation-container">
+            <div class="animation-container" > 
+                <!-- (click)="scrollToElement('aboutMe')" -->
                 <img src=".\assets\img\arrow.png">
             </div>
             <p>Scroll<br>
