--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,4 +1,4 @@
-<div class="skill-container">
+<div id="mySkills" class="skill-container">
     <div #arrowTrigger class="skill-text">
         <p>My skills</p> 
     </div>
