--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -57,6 +57,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            cursor: pointer;
 
             &::before {
                 content: attr(href);
