--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="portfolio-container">
+<div id="portfolio" class="portfolio-container">
     <div class="portfolio-header">
         <h2>Portfolio</h2>
         <p #arrowTrigger>This page is a sample of my work - please feel free to try them out.</p>
