arrow3 fix, new function.ts, cleancode, update footer

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -13,7 +13,7 @@
                 <br>
                 If you think I'd be a good match for your projects, contact me!
             </span>
-            <div class="button-container">
+            <div class="button-container" (click)="scrollToArea('contactSection')">
                 <button>
                     Let's talk
                 </button>
