--- a/src/app/arrow3/arrow3.component.html
+++ b/src/app/arrow3/arrow3.component.html
@@ -1,6 +1,6 @@
 <div class="arrow-container">
-    <div  class="arrow">            <!-- [class.arrowAnimation-Container]="arrowTrigger" -->
-        <div class="line"></div>    <!-- [class.arrow-animation]="arrowTrigger"  -->
+    <div [class.arrowAnimation-Container]="arrowTrigger3" class="arrow">            <!--  -->
+        <div [class.arrow-animation]="arrowTrigger3" class="line"></div>    <!--   -->
         <div class="line"></div>
         <div class="line"></div>
     </div>
