--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
-<div class="contact-container">
-    <div class="menu-footer-content">
+<div class="contact-container" id="contactSection">
+    <div class="menu-footer-content" #arrowTrigger3>
         <div class="greet">
             <p>Say Hi!</p>
         </div>
