--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,8 @@
 <div class="footer">
     <div class="footer-links">
+        <img src="./../../assets/img/logo.png" alt="">
+    </div>
+    <div class="footer-rechts">
         <a href="#">
             <img src="./assets/img/github.png">
         </a>
