--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -62,6 +62,7 @@ main {
         .info-right {
             padding-right: 5%;
             padding-bottom: 2%;
+            cursor: pointer;
 
             .animation-container {
                 height: 186px;
