--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
 <app-my-skills (visible)="isArrowVisible = $event"></app-my-skills>
 <app-arrow2 [arrowTrigger2]="isArrowVisible2"></app-arrow2>
 <app-portfolio (visible2)="isArrowVisible2 = $event"></app-portfolio>
-<app-arrow3></app-arrow3>
-<app-contact></app-contact>
+<app-arrow3 [arrowTrigger3]="isArrowVisible3"></app-arrow3>
+<app-contact (visible3)="isArrowVisible3 = $event"></app-contact>
 <app-footer></app-footer>
