--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,8 +1,21 @@
 .footer {
     width: 100%;
     background-color: #000000;
+    justify-content: center;
+    align-items: center;
 
     .footer-links {
+        width: 200px;
+
+        img {
+            cursor: pointer;
+            height: 30px;
+            filter: brightness(0) saturate(100%) invert(100%) sepia(4%) saturate(78%) hue-rotate(120deg) brightness(112%) contrast(100%);
+        }
+
+    }
+
+    .footer-rechts {
         width: 200px;
         display: flex;
         justify-content: space-between;
