--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,16 +10,14 @@
     </header>
 
     <div class="basic-information">
-        <p class="email">pesendorfer.gerald@hotmail.com</p>
+        <p class="email" (click)="scrollToArea('contactSection')">pesendorfer.gerald@hotmail.com</p>
 
-        <div class="info-right">
-            <div class="animation-container" > 
-                <!-- (click)="scrollToElement('aboutMe')" -->
+        <div class="info-right" (click)="scrollToArea('aboutMe')">
+            <div class="animation-container">
                 <img src=".\assets\img\arrow.png">
             </div>
             <p>Scroll<br>
                 Down</p>
         </div>
-
     </div>
 </main>
