--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,7 +29,7 @@
                 <a class="link1" href="https://github.com/Pesendorfer90" target="_blank">
                     <img src="./assets/img/github.png">
                 </a>
-                <a class="link2" href="mailto:pesendorfer.gerald@hotmail.com" target="_blank">
+                <a class="link2" (click)="scrollToArea('contactSection')" target="_blank">
                     <img src="./assets/img/email.png">
                 </a>
                 <a class="link3" href="https://www.linkedin.com/in/gerald-pesendorfer-432091246/" target="_blank">
