--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -165,6 +165,8 @@
             font-size: 23px;
             font-weight: 400;
             transition: 0.1s ease-out;
+            text-decoration: none;
+            color: black;
 
             &:hover {
               width: 238px;
@@ -310,6 +312,8 @@
             font-size: 23px;
             font-weight: 400;
             transition: 0.1s ease-out;
+            text-decoration: none;
+            color: black;
 
             &:hover {
               width: 238px;
