update footer link animation

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,7 +25,7 @@
                 <p>Say Hi!</p>
                 <a href="mailto:pesendorfer.gerald@hotmail.com">pesendorfer.gerald@hotmail.com</a>
             </div>
-            <div class="footer-links">
+            <div class="footer-right">
                 <a class="link1" href="https://github.com/Pesendorfer90" target="_blank">
                     <img src="./assets/img/github.png">
                 </a>
