--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -156,7 +156,7 @@
                 font-family: Overpass;
             }
 
-            .footer-links {
+            .footer-right {
                 width: 200px;
                 display: flex;
                 justify-content: space-between;
