--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,8 @@ app-my-skills,
 app-portfolio,
 app-arrow2,
 app-arrow3,
-app-contact {
+app-contact,
+app-footer {
     display: flex;
     justify-content: center;
     width: 100vw;
