--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,11 +1,11 @@
-<div class="contact-container" id="contactSection">
+<div class="contact-container">
     <div class="menu-footer-content" #arrowTrigger3>
         <div class="greet">
             <p>Say Hi!</p>
         </div>
     </div>
     <div class="contact-main-container">
-        <div class="contact-form">
+        <div class="contact-form"  id="contactSection">
             <h3>Want to discuss a new project?</h3>
             <p>Say hello! let's discuss your ideas and make it happen</p>
             <div class="input-container">
