--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,16 +1,33 @@
 <div class="footer">
-    <div class="footer-links">
-        <img src="./../../assets/img/logo.png" alt="">
-    </div>
-    <div class="footer-rechts">
-        <a href="#">
-            <img src="./assets/img/github.png">
-        </a>
-        <a href="#">
-            <img src="./assets/img/email.png">
-        </a>
-        <a href="#">
-            <img src="./assets/img/linkedin.png">
-        </a>
+    <div class="footer-container">
+        <div class="footer-left">
+            <img src="./../../assets/img/logo.png" alt="">
+            <span>© Gerald Pesendorfer 2024</span>
+        </div>
+        <div class="footer-right">
+            <div class="links">
+                <a class="link1" href="https://github.com/Pesendorfer90" target="_blank">
+                    <img src="./assets/img/github.png" id="link1" 
+                    (mouseenter)="onMouseEnter('link1')" 
+                    (mouseleave)="onMouseOut('link1')"
+                    [ngClass]="{'hover-link': linkAnimationStates['link1']?.enter, 'reset-link': linkAnimationStates['link1']?.leave}">
+                </a>
+                <a class="link2" (click)="scrollToArea('contactSection')" target="_blank">
+                    <img src="./assets/img/email.png" id="link2" 
+                    (mouseenter)="onMouseEnter('link2')" 
+                    (mouseleave)="onMouseOut('link2')"
+                    [ngClass]="{'hover-link': linkAnimationStates['link2']?.enter, 'reset-link': linkAnimationStates['link2']?.leave}">
+                </a>
+                <a class="link3" href="https://www.linkedin.com/in/gerald-pesendorfer-432091246/" target="_blank">
+                    <img src="./assets/img/linkedin.png" id="link3" 
+                    (mouseenter)="onMouseEnter('link3')" 
+                    (mouseleave)="onMouseOut('link3')"
+                    [ngClass]="{'hover-link': linkAnimationStates['link3']?.enter, 'reset-link': linkAnimationStates['link3']?.leave}">
+                </a>
+            </div>
+            <div class="legal-notice">
+                <a>Legal Notice</a>
+            </div>
+        </div>
     </div>
 </div>
