--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,31 +1,152 @@
 .footer {
-    width: 100%;
+    width: 100vw;
     background-color: #000000;
+    display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
 
-    .footer-links {
-        width: 200px;
-
-        img {
-            cursor: pointer;
-            height: 30px;
-            filter: brightness(0) saturate(100%) invert(100%) sepia(4%) saturate(78%) hue-rotate(120deg) brightness(112%) contrast(100%);
-        }
-
-    }
-
-    .footer-rechts {
-        width: 200px;
+    .footer-container {
+        width: 90%;
         display: flex;
         justify-content: space-between;
+        align-items: flex-end;
 
-        a {
-            cursor: pointer;
+        .footer-left {
+            width: 200px;
+            display: flex;
+            flex-direction: column;
 
             img {
-                height: 40px;
+                cursor: pointer;
+                height: 30px;
+                width: 48.5px;
+                filter: brightness(0) saturate(100%) invert(100%) sepia(4%) saturate(78%) hue-rotate(120deg) brightness(112%) contrast(100%);
+                padding-bottom: 20px;
+            }
+
+            span {
+                color: #FFFCF3;
+            }
+
+        }
+
+        .footer-right {
+
+
+            .links {
+                width: 200px;
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-end;
+
+                a {
+                    cursor: pointer;
+
+                    img {
+                        height: 40px;
+                        padding-bottom: 0;
+                        padding-top: 10px;
+                        // animation: hover-link-inaktiv 0.2s ease-in-out reverse;
+
+                        // &:hover {
+                        //     animation: hover-link-active 0.2s ease-in-out forwards;
+                        // }
+                    }
+                }
+            }
+
+            .legal-notice {
+                width: 100%;
+                display: flex;
+                position: relative;
+                cursor: pointer;
+                padding-top: 20px;
+
+                &::before {
+                    content: attr(href);
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    border-bottom: 2px solid #00BC8F;
+                    width: 0;
+                    opacity: 0;
+
+                    @keyframes border-animation {
+                        35% {
+                            height: 0px;
+                            width: 39px;
+                            left: 0px;
+                        }
+
+                        100% {
+                            height: 0px;
+                            width: 57px;
+                            // left: 0px;
+                            left: 35px;
+                            opacity: 1;
+                        }
+                    }
+                }
+
+                &:hover::before {
+                    animation: border-animation 0.2s ease-out;
+                    animation-fill-mode: forwards;
+
+                }
+
+                &:active::before {
+                    bottom: 0 !important;
+                    left: 0 !important;
+                    height: 170px !important;
+                    width: 600px !important;
+                    border: 4px solid black;
+                }
+
+                a {
+                    font-size: 16px;
+                    font-family: Overpass;
+                    color: #FFFCF3;
+                    text-decoration: none;
+
+                    &:hover {
+                        font-weight: 700;
+                    }
+                }
             }
         }
+    }
+}
+
+.hover-link {
+    animation: hover-link-active 0.2s ease-in-out forwards;
+}
+
+.reset-link {
+    animation: hover-link-inaktiv 0.2s ease-in-out forwards;
+}
+
+@keyframes hover-link-inaktiv {
+    0% {
+        padding-bottom: 10px;
+        padding-top: 0px;
+    }
+
+    100% {
+        padding-bottom: 0px;
+        padding-top: 10px;
+    }
+}
+
+@keyframes hover-link-active {
+    0% {
+        padding-bottom: 0px;
+        padding-top: 10px;
+    }
+
+    100% {
+        padding-bottom: 10px;
+        padding-top: 0px;
     }
 }
