--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -8,10 +8,12 @@
         height: 250px;
         display: flex;
         align-items: flex-end;
-        justify-content: space-between;
-        padding: 0% 5% 50px;
+        justify-content: center;
 
         .greet {
+            width: 90%;
+            display: flex;
+            justify-content: flex-start;
 
             p {
                 font-size: 78px;
@@ -30,11 +32,15 @@
 
     .contact-main-container {
         background-color: #000000;
+        display: flex;
+        justify-content: center;
 
         .contact-form {
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: 90%;
+            position: relative;
 
             h3 {
                 font-family: Overpass;
@@ -251,6 +257,18 @@
 
                 .active {
                     animation: button-active 0.2s ease-in-out forwards;
+                }
+
+                .arrow-up-container {
+                    position: absolute;
+                    right: 0px;
+                    bottom: 0px;
+
+                    div {
+                        background-color: #00BC8F;
+                        height: 70px;
+                        width: 70px;
+                    }
                 }
             }
         }
