--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -14,7 +14,6 @@
         align-items: flex-end;
 
         .footer-left {
-            width: 200px;
             display: flex;
             flex-direction: column;
 
@@ -27,7 +26,9 @@
             }
 
             span {
+                font-family: Poppins;
                 color: #FFFCF3;
+                font-size: 23px;
             }
 
         }
@@ -48,11 +49,6 @@
                         height: 40px;
                         padding-bottom: 0;
                         padding-top: 10px;
-                        // animation: hover-link-inaktiv 0.2s ease-in-out reverse;
-
-                        // &:hover {
-                        //     animation: hover-link-active 0.2s ease-in-out forwards;
-                        // }
                     }
                 }
             }
@@ -60,58 +56,49 @@
             .legal-notice {
                 width: 100%;
                 display: flex;
+                justify-content: flex-end;
                 position: relative;
                 cursor: pointer;
                 padding-top: 20px;
 
-                &::before {
-                    content: attr(href);
-                    position: absolute;
-                    bottom: 0;
-                    left: 0;
-                    border-bottom: 2px solid #00BC8F;
-                    width: 0;
-                    opacity: 0;
+                div {
+                    position: relative;
 
-                    @keyframes border-animation {
-                        35% {
-                            height: 0px;
-                            width: 39px;
-                            left: 0px;
-                        }
-
-                        100% {
-                            height: 0px;
-                            width: 57px;
-                            // left: 0px;
-                            left: 35px;
-                            opacity: 1;
-                        }
+                    &::before {
+                        content: attr(href);
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        border-bottom: 2px solid #00BC8F;
+                        width: 0;
+                        opacity: 0;
                     }
-                }
 
-                &:hover::before {
-                    animation: border-animation 0.2s ease-out;
-                    animation-fill-mode: forwards;
+                    &:hover::before {
+                        animation: border-animation 0.2s ease-out;
+                        animation-fill-mode: forwards;
 
-                }
+                    }
 
-                &:active::before {
-                    bottom: 0 !important;
-                    left: 0 !important;
-                    height: 170px !important;
-                    width: 600px !important;
-                    border: 4px solid black;
-                }
+                    &:active::before {
+                        bottom: 0 !important;
+                        left: 0 !important;
+                        height: 170px !important;
+                        width: 600px !important;
+                        border: 4px solid black;
+                    }
 
-                a {
-                    font-size: 16px;
-                    font-family: Overpass;
-                    color: #FFFCF3;
-                    text-decoration: none;
+                    a {
+                        font-size: 16px;
+                        font-family: Overpass;
+                        color: #FFFCF3;
+                        text-decoration: none;
+                        padding-right: 2px;
 
-                    &:hover {
-                        font-weight: 700;
+                        &:hover {
+                            font-weight: 700;
+                            padding-right: 0;
+                        }
                     }
                 }
             }
@@ -148,5 +135,20 @@
     100% {
         padding-bottom: 10px;
         padding-top: 0px;
+    }
+}
+
+@keyframes border-animation {
+    35% {
+        height: 0px;
+        width: 39px;
+        left: 0px;
+    }
+
+    100% {
+        height: 0px;
+        width: 59px;
+        left: 37px;
+        opacity: 1;
     }
 }
