style arrow up in contact component

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -85,7 +85,11 @@
                     </div>
 
                     <div class="arrow-up-container">
-                        <div class="arrow-up">HIER PFEIL MACHEN</div>
+                        <div class="arrow-up">
+                            <div class="line"></div>
+                            <div class="line"></div>
+                            <div class="line"></div>
+                        </div>
                     </div>
 
                 </form>
