--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -85,7 +85,9 @@
                     </div>
 
                     <div class="arrow-up-container">
-                        <div class="arrow-up">
+                        <div class="arrow-up" (mouseenter)="onMouseEnter()"
+                        (mouseleave)="onMouseOut()"
+                        [ngClass]="{'hover-up': linkAnimationStates['arrowUp']?.enter, 'reset-down': linkAnimationStates['arrowUp']?.leave}">
                             <div class="line"></div>
                             <div class="line"></div>
                             <div class="line"></div>
