--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,15 +4,18 @@
 
     <div class="introduction-info">
         <div class="introduction-text">
-            <span>
-                I am a Front-end deverloper based in Katzelsdorf, Austria. I help designers and companies to bring their
-                ideas
-                to real
-                life. Creativity and logical thinking are skills that I have developed to connect ideas into quality
-                products.<br>
-                <br>
-                If you think I'd be a good match for your projects, contact me!
-            </span>
+            <div>
+                <span>
+                    I am a Front-end deverloper based in Katzelsdorf, Austria. I help designers and companies to bring
+                    their
+                    ideas
+                    to real
+                    life. Creativity and logical thinking are skills that I have developed to connect ideas into quality
+                    products.<br>
+                    <br>
+                    If you think I'd be a good match for your projects, contact me!
+                </span>
+            </div>
             <div class="button-container" (click)="scrollToArea('contactSection')">
                 <button>
                     Let's talk
