--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -23,18 +23,21 @@
             display: flex;
             flex-direction: column;
             width: 50%;
-            height: 530px;
+            // height: 530px;
 
-            span {
-                font-family: Overpass;
-                font-size: 23px;
-                text-align: left;
-                height: 50%;
+            div:first-child {
+                span {
+                    font-family: Overpass;
+                    font-size: 23px;
+                    text-align: left;
+                    // height: 50%;
+                }
             }
 
             .button-container {
                 display: flex;
                 justify-content: center;
+                align-items: center;
                 height: 50%;
 
                 button {
@@ -78,13 +81,79 @@
             transition: opacity 0.19s ease-in-out;
         }
 
-        
+
         &:hover::before {
             opacity: 1;
         }
 
         img {
             height: 530px;
+        }
+    }
+}
+
+@media (max-width: 1350px) {
+
+    .introduction-container {
+        h2 {
+            font-size: 5.8vw;
+        }
+
+        .introduction-info {
+            .introduction-text {
+                div:first-child {
+                    span {
+                        font-family: Overpass;
+                        font-size: 23px;
+                        text-align: left;
+                    }
+                }
+
+                .button-container {
+                    button {
+                        width: 213px;
+                        height: 68px;
+                        font-family: Overpass;
+                        font-size: 23px;
+                        font-weight: 400;
+                        border: 4px solid black;
+                        transition: 0.1s ease-out;
+                        background-color: #FFFCF3;
+
+                        &:hover {
+                            width: 268px;
+                            font-weight: 700;
+                        }
+
+                        &:active {
+                            background-color: black;
+                            color: #FFFCF3;
+                            width: 268px;
+                            font-weight: 400;
+                        }
+                    }
+                }
+            }
+        }
+
+        .about-img {
+            position: relative;
+
+            &::before {
+                content: attr(href);
+                position: absolute;
+                border: 4px solid black;
+                top: 20px;
+                left: 20px;
+                width: 526px;
+                height: 526px;
+                opacity: 0.0;
+                transition: opacity 0.19s ease-in-out;
+            }
+
+            img {
+                height: 39.2vw;
+            }
         }
     }
 }
